<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.administrator.myapplication.MainActivity"
        tools:layout_editor_absoluteY="81dp"
        tools:layout_editor_absoluteX="0dp"
        android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
     </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="vertical">
        <TextView
                android:text="@string/txt_login_str"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>
        <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/txt_login_id"
                android:layout_gravity="center"
                android:hint="@string/txt_login_id_upper"/>
        <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/txt_login_pw"
                android:layout_gravity="center"
                android:hint="@string/txt_login_pw_upper"/>
        <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/btn_login"
                android:layout_gravity="center"
                android:text="@string/str_btn_login"
                android:background="#ffff00"/>

        <CheckBox android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:id="@+id/chk_auto_login"
                  android:text="@string/chk_login"
                  android:layout_gravity="center|bottom"
        />

    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:orientation="horizontal">
        <TextView
                android:text="@string/str_reg_login_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginLeft="50dp"
                android:id="@+id/txt_reg_login_id"/>
        <TextView
                android:text="  |  "
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"/>
        <TextView
                android:text="@string/str_reg_login_pw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:id="@+id/txt_reg_login_pw"/>
        <TextView
                android:text="  |  "
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"/>
        <TextView
                android:text="@string/str_find_login_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:id="@+id/txt_find_login_id"/>
        <TextView
                android:text="  |  "
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"/>
        <TextView
                android:text="@string/str_find_login_pw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:id="@+id/txt_find_login_pw"/>
    </LinearLayout>

</LinearLayout>
